--- a/package.json
+++ b/package.json
@@ -1,114 +1,113 @@
 {
-  "name": "RedmineTimeTracker",
-  "version": "0.9.1",
-  "description": "Time Tracking tool for Redmine",
-  "author": "Yujiro Takeda <siro.cola@gmail.com>",
-  "license": "MIT",
-  "main": "./out/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ujiro99/RedmineTimeTracker.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ujiro99/RedmineTimeTracker/issues"
-  },
-  "keywords": [
-    "redmine",
-    "electron-app",
-    "chrome-app"
-  ],
-  "scripts": {
-    "postinstall": "install-app-deps",
-    "test": "karma start --single-run",
-    "start": "electron ./app",
-    "clean": "rimraf ./release/electron",
-    "dist:chrome": "grunt build-chrome && grunt compress:ci",
-    "dist:electron": "grunt build-electron && npm run clean && npm prune && build --x64 --ia32",
-    "release": "npm run dist:electron"
-  },
-  "build": {
-    "appId": "org.ujiro99.redminetimetracker",
-    "category": "public.app-category.developer-tools",
-    "files": [
-      "out",
-      "node_modules"
+    "name": "RedmineTimeTracker",
+    "version": "0.9.1",
+    "description": "Time Tracking tool for Redmine",
+    "author": "Yujiro Takeda <siro.cola@gmail.com>",
+    "license": "MIT",
+    "main": "./out/index.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kuwkuw/RedmineTimeTracker.git"
+    },
+    "bugs": {
+        "url": "https://github.com/ujiro99/RedmineTimeTracker/issues"
+    },
+    "keywords": [
+        "redmine",
+        "electron-app",
+        "chrome-app"
     ],
-    "directories": {
-      "output": "release/electron"
+    "scripts": {
+        "postinstall": "install-app-deps",
+        "test": "karma start --single-run",
+        "start": "electron ./app",
+        "clean": "rimraf ./release/electron",
+        "dist:chrome": "grunt build-chrome && grunt compress:ci",
+        "dist:electron": "grunt build-electron && npm run clean && npm prune && build --x64 --ia32",
+        "release": "npm run dist:electron"
     },
-    "dmg": {
-      "contents": [
-        {
-          "x": 192,
-          "y": 344
+    "build": {
+        "appId": "org.ujiro99.redminetimetracker",
+        "category": "public.app-category.developer-tools",
+        "files": [
+            "out",
+            "node_modules"
+        ],
+        "directories": {
+            "output": "release/electron"
         },
-        {
-          "x": 448,
-          "y": 344,
-          "type": "link",
-          "path": "/Applications"
+        "dmg": {
+            "contents": [{
+                    "x": 192,
+                    "y": 344
+                },
+                {
+                    "x": 448,
+                    "y": 344,
+                    "type": "link",
+                    "path": "/Applications"
+                }
+            ]
+        },
+        "win": {
+            "target": [
+                "nsis",
+                "squirrel"
+            ]
+        },
+        "linux": {
+            "target": [
+                "AppImage",
+                "deb"
+            ]
         }
-      ]
     },
-    "win": {
-      "target": [
-        "nsis",
-        "squirrel"
-      ]
+    "dependencies": {
+        "electron-auto-updater": "^1.0.0",
+        "electron-debug": "^1.0.0",
+        "electron-is-dev": "^0.1.2",
+        "electron-json-storage": "^2.1.0"
     },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
+    "devDependencies": {
+        "angular-mocks": "^1.4.1",
+        "chai": "~1.8.1",
+        "devtron": "^1.1.0",
+        "electron": "^1.3.3",
+        "electron-builder": "^11.2.4",
+        "electron-builder-squirrel-windows": "^11.3.0",
+        "grunt": "~0.4.1",
+        "grunt-bower-task": "^0.4.0",
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-contrib-coffee": "~0.7.0",
+        "grunt-contrib-compress": "^0.8.0",
+        "grunt-contrib-connect": "~0.5.0",
+        "grunt-contrib-copy": "^0.5.0",
+        "grunt-contrib-jade": "~0.8.0",
+        "grunt-contrib-stylus": "^0.21.0",
+        "grunt-contrib-uglify": "~0.2.7",
+        "grunt-este-watch": "^0.1.16",
+        "grunt-ngmin": "0.0.3",
+        "grunt-release": "^0.9.0",
+        "ibrik": "^2.0.0",
+        "karma": "^1.3.0",
+        "karma-chai": "^0.1.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-coffee-preprocessor": "^1.0.1",
+        "karma-coverage": "^1.1.1",
+        "karma-coveralls": "^1.1.2",
+        "karma-mocha": "^1.3.0",
+        "karma-mocha-reporter": "^2.2.0",
+        "load-grunt-tasks": "^0.4.0",
+        "mocha": "~1.14.0",
+        "rimraf": "^2.5.4",
+        "sinon": "~1.9.1",
+        "xo": "^0.16.0"
+    },
+    "xo": {
+        "esnext": true,
+        "envs": [
+            "node",
+            "browser"
+        ]
     }
-  },
-  "dependencies": {
-    "electron-auto-updater": "^1.0.0",
-    "electron-debug": "^1.0.0",
-    "electron-is-dev": "^0.1.2",
-    "electron-json-storage": "^2.1.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.1",
-    "chai": "~1.8.1",
-    "devtron": "^1.1.0",
-    "electron": "^1.3.3",
-    "electron-builder": "^11.2.4",
-    "electron-builder-squirrel-windows": "^11.3.0",
-    "grunt": "~0.4.1",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-compress": "^0.8.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-stylus": "^0.21.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-este-watch": "^0.1.16",
-    "grunt-ngmin": "0.0.3",
-    "grunt-release": "^0.9.0",
-    "ibrik": "^2.0.0",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coffee-preprocessor": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coveralls": "^1.1.2",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.0",
-    "load-grunt-tasks": "^0.4.0",
-    "mocha": "~1.14.0",
-    "rimraf": "^2.5.4",
-    "sinon": "~1.9.1",
-    "xo": "^0.16.0"
-  },
-  "xo": {
-    "esnext": true,
-    "envs": [
-      "node",
-      "browser"
-    ]
-  }
 }
